--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "todo app",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon src/main.ts"
+    "start:dev": "nodemon src/main.ts",
+    "start": "node dist/main.js",
+    "build": "tsc & node dist/main.js"
   },
   "author": "Alexandr Lvov",
   "license": "ISC",
