--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "todo app",
   "main": "main.js",
   "scripts": {
-    "start:dev": "nodemon src/main.ts",
     "start": "node dist/main.js",
-    "build": "tsc & node dist/main.js"
+    "start:dev": "nodemon src/main.ts",
+    "build": "tsc",
+    "postbuild": "node dist/main.js"
   },
   "author": "Alexandr Lvov",
   "license": "ISC",
